# twin-game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  index.css  index.html  w4-build.cmd  w4-clean.cmd  webserver.cmd
interface/: AdsNetworkWrapper.h
js/: AdsNetworkWrapper.js  stub.js
resources/: AssetCreator.config  resources.json  settings.json
resources/Materials/: animated.mat  default.mat  sprite.mat
resources/Materials/shaders/: animated.fs  animated.vs  default.fs  default.vs  sprite.fs  sprite.vs
resources/Models/: book.fbx  books.fbx  chel.fbx  duck.fbx  scene.fbx  vantuz.fbx
resources/Models/bath/: bath.fbx  bath_broken_1.fbx  bath_broken_2.fbx
resources/Models/stand/: stand.fbx  stand_broken_1.fbx  stand_broken_2.fbx
resources/Models/toilet/: toilet.fbx  toilet_broken_1.fbx  toilet_broken_2.fbx
sources/: AdsNetworkWrapper.cpp  gameFsm.h  main.cpp
sources/Audio/: AudioManager.cpp  AudioManager.h
sources/FlowUi/Fov/: AdaptiveFov.h
sources/FlowUi/Ui/: DomUi.cpp  DomUi.h  FlexGuiWidget.cpp  FlexGuiWidget.h  Image3d.cpp  Image3d.h  UiPoint.cpp  UiPoint.h  UiRect.cpp  UiRect.h  WorldUi.cpp  WorldUi.h
sources/Game/: KitchenGame.cpp  KitchenGame.h
sources/Game/Components/: InteractiveItem.cpp  InteractiveItem.h  RotateComponent.cpp  RotateComponent.h
sources/Game/Effects/: Explosion.cpp  Explosion.h
sources/Settings/: ResourceLibary.cpp  ResourceLibary.h  Settings.cpp  Settings.h  SettingsContainer.h
sources/UiWindows/: FailDomUi.cpp  FailDomUi.h  GameDomUi.cpp  GameDomUi.h  GameUi.cpp  GameUi.h  WinDomUi.cpp  WinDomUi.h
(+15 files in other folders)
